--- a/views/add_ride.erb
+++ b/views/add_ride.erb
@@ -1,11 +1,11 @@
 <form action="/rides/add" method="post">
   <p>Date
-    <input type="date" name="date" required="required"/>
+    <input type="date" name="date" required="required">
   </p>
   <p> Ride Distance (in Miles)
     <input type="text" name="distance" />
   </p>
-  <p> Ride Time (HH:MM format)
+  <p> Ride Duration (HH:MM format)
     <input type="text" name="duration" />
   </p>
   <input type="submit" value="Save Ride" />
