add category refactor tests

--- a/views/add_ride.erb
+++ b/views/add_ride.erb
@@ -8,6 +8,14 @@
   <p> Ride Duration (HH:MM format)
     <input type="text" name="duration" />
   </p>
+  <p>Ride Category
+    <input type="radio" name="category" value="Road" />Road
+    <input type="radio" name="category" value="Mountain" />Mountain
+    <input type="radio" name="category" value="Cross" />Cross
+    <input type="radio" name="category" value="Race" />Race
+    <input type="radio" name="category" value="Commute" />Commute
+    <input type="radio" name="category" value="Trainer" />Trainer
+  </p>
   <input type="submit" value="Save Ride" />
 </form>
 
